fix: resolve conflitos com develop e fecha gaps do DoD da UH-09
  - Merge de origin/develop: CategoriaServico (AR_CONDICIONADO → MARCENARIA),
    ProfissionalRepository, PushNotificationService (interface), PedidoService,
    PedidoServiceTest e migration V12 (conflito de versão → renomeado para V15)
  - CategoriaService migrado de enum para CategoriaRepository (pacote corrigido
    de com.nahora.service para com.nahora.services)
  - criarPedido agora chama notificarProfissionaisDaCategoria após o save
  - PedidoCardDTO consolidado em dto/response (duplicata em dto/request removida)
  - LogPushNotificationService implementa enviarNotificacao da interface
  - @ApiResponses adicionado em GET /api/v1/categorias e GET /api/v1/pedidos
  - CategoriaServiceTest reescrito para mockar CategoriaRepository